# wikidata-id-scraper

./: .gitignore  README.md  pyproject.toml
wikidata_id_scraper/: __init__.py
